--- a/dictionary-project/src/App.css
+++ b/dictionary-project/src/App.css
@@ -1,3 +1,8 @@
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .App-header {
   margin: 30px 0;
 }
@@ -6,4 +11,9 @@
   max-width: 200px;
   display: block;
   margin: 0 auto;
+}
+
+.App-footer {
+  text-align: center;
+  margin: 30px 0;
 }
